# uni-open-judge

./: LICENSE  OJ.code-profile  README.md
luogu/: CMakeLists.txt  P15289-brut.cpp  P15289-generator.cpp  P15289.cpp  P15289.in
